Fix sidebar z-order on Firefox

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -56,6 +56,7 @@ div.rustdoc {
 .sidebar {
     top: 34px;
     left: 0;
+    z-index: -1;
 }
 
 body {
